Dentdge moment, re-added about image fix and changes align items to center in about section

--- a/src/sections/about/About.css
+++ b/src/sections/about/About.css
@@ -13,7 +13,7 @@
     display: flex;
     gap: 4rem;
     padding: 6rem 15%;
-    align-items: flex-start;
+    align-items: center;
 }
 
 .about-image {
@@ -30,6 +30,11 @@
 }
 
 .about-image img {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
     width: 100%;
     height: 100%;
     display: block;
